@@ -28,14 +28,12 @@ static level *level_load(char *filename) {
     strncpy(fname, LEVELDIR, sizeof(fname));
     strncpy(fname + strlen(fname), filename, sizeof(fname)-strlen(fname));
     if (fname[sizeof(fname)-1] != '\0') {
-	fatal_error_string = "File name length overflow";
-	return NULL;
+	fatal("File name length overflow");
     }
 
     fp = fopen(fname, "r");
     if (!fp) {
-	fatal_error_string = "Unable to read level file";
-	return NULL;
+	fatal("Unable to read level file");
     }
 
     level = level_new();
@@ -45,14 +43,12 @@ static level *level_load(char *filename) {
 
     while (fgets(buf, sizeof(buf), fp)) {
 	if (buf[strlen(buf)-1] != '\n') {
-	    fatal_error_string = "Line length overflow in level set file";
-	    return NULL;
+	    fatal("Line length overflow in level set file");
 	}
 	buf[strcspn(buf, "\r\n")] = '\0';
 	if (ishdr(buf, "Title: ")) {
 	    if (level->title) {
-		fatal_error_string = "Multiple titles in level file";
-		return NULL;
+		fatal("Multiple titles in level file");
 	    }
 	    level->title = dupstr(buf + 7);
 	} else if (ishdr(buf, "Width: ")) {
@@ -61,30 +57,25 @@ static level *level_load(char *filename) {
 	    level->height = atoi(buf + 8);
 	} else if (ishdr(buf, "Map: ")) {
 	    if (level->leveldata == NULL) {
-		fatal_error_string = "Map before size in level file";
-		return NULL;
+		fatal("Map before size in level file");
 	    }
 	    if ((int)strlen(buf + 5) != level->width) {
-		fatal_error_string = "Wrong length map line in level file";
-		return NULL;
+		fatal("Wrong length map line in level file");
 	    }
 	    if (nlines >= level->height) {
-		fatal_error_string = "Too many map lines in level file";
-		return NULL;
+		fatal("Too many map lines in level file");
 	    }
 	    memcpy(level->leveldata + level->width * nlines,
 		   buf + 5, level->width);
 	    nlines++;
 	} else {
-	    fatal_error_string = "Unrecognised keyword in level file";
-	    return NULL;
+	    fatal("Unrecognised keyword in level file");
 	}
 	if (level->width > 0 && level->height > 0 && level->leveldata == NULL)
 	    level_setsize(level, level->width, level->height);
     }
     if (nlines < level->height) {
-	fatal_error_string = "Not enough map lines in level file";
-	return NULL;
+	fatal("Not enough map lines in level file");
     }
 
     fclose(fp);
@@ -103,14 +94,12 @@ levelset *levelset_load(char *filename) {
     strncpy(fname + strlen(fname), filename, sizeof(fname)-strlen(fname));
     strncpy(fname + strlen(fname), ".set", sizeof(fname)-strlen(fname));
     if (fname[sizeof(fname)-1] != '\0') {
-	fatal_error_string = "File name length overflow";
-	return NULL;
+	fatal("File name length overflow");
     }
 
     fp = fopen(fname, "r");
     if (!fp) {
-	fatal_error_string = "Unable to read level set file";
-	return NULL;
+	fatal("Unable to read level set file");
     }
 
     set = levelset_new();
@@ -119,22 +108,19 @@ levelset *levelset_load(char *filename) {
 
     while (fgets(buf, sizeof(buf), fp)) {
 	if (buf[strlen(buf)-1] != '\n') {
-	    fatal_error_string = "Line length overflow in level set file";
-	    return NULL;
+	    fatal("Line length overflow in level set file");
 	}
 	buf[strcspn(buf, "\r\n")] = '\0';
 	if (ishdr(buf, "Title: ")) {
 	    if (set->title) {
-		fatal_error_string = "Multiple titles in level set file";
-		return NULL;
+		fatal("Multiple titles in level set file");
 	    }
 	    set->title = dupstr(buf + 7);
 	} else if (ishdr(buf, "Level: ")) {
 	    levelset_nlevels(set, set->nlevels+1);
 	    set->levels[set->nlevels-1] = level_load(buf + 7);
 	} else {
-	    fatal_error_string = "Unrecognised keyword in level set file";
-	    return NULL;
+	    fatal("Unrecognised keyword in level set file");
 	}
     }
 
